--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
 </head>
 <body>
     <div class="sidebar">
-    <ul class="menu">
-        <li class="menu-item">
-           <p class="menu-text">menu here</p>
-           <ul class="submenu">
-            <li><span class="diamond">◆</span> HOME</li>
-            <li><span class="diamond">◆</span> CONTACTS</li>
-            <li><span class="diamond">◆</span> OUR TEAM</li>
-            <li><span class="diamond">◆</span> FAQ</li>
-            <li><span class="diamond">◆</span> ABOUT</li>
-            <li><span class="diamond">◆</span> NEWS</li>
-           </ul> 
-        </li>
-        
-    </ul>
-</div>
+        <ul class="menu">
+            <li class="menu-item">
+                <p class="menu-text">Menu here</p>
+                <ul class="submenu">
+                    <li class="submenu-item"><span class="diamond">◆</span> HOME</li>
+                    <li class="submenu-item"><span class="diamond">◆</span> CONTACTS</li>
+                    <li class="submenu-item"><span class="diamond">◆</span> OUR TEAM</li>
+                    <li class="submenu-item"><span class="diamond">◆</span> FAQ</li>
+                    <li class="submenu-item"><span class="diamond">◆</span> ABOUT</li>
+                    <li class="submenu-item"><span class="diamond">◆</span> NEWS</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
